2004-11-25 Mikhail Khodjaiants
	The "decrementInstallCount" method of IBreakpoint should be called from the UI thread.
	Replaced the "breakpointRemoved" method of ICBreakpointListener by the "breakpointsRemoved"
	method that accepts multiple breakpoints.
	* ICBreakpointListener.java
	* CBreakpointManager.java
	* CBreakpointNotifier.java
	
2004-11-24 Alain Magloire

	Use the ICDITarget.deleteAllBreakpoints() for speed.
	* org/eclipse/cdt/debug/internal/core/CBreakpointManager.java

2004-11-24 Mikhail Khodjaiants
	Do not request to dispose local variables when the target is resumed.
	* CExpression.java
	* CGlobalVariable.java
	* CVariable.java

2004-11-23 Mikhail Khodjaiants
	The enablement of the step actions is calculated in the UI thread. This causes 
	the UI locks for slow or unresponsive targets. Use the cached stack frames to 
	calculate the enablement instead of requesting gdb.
	* CThread.java

2004-11-22 Mikhail Khodjaiants
	Check if the pointer value is not null before pass it to the address factory.
	* CValue.java
 
2004-11-18 Mikhail Khodjaiants
	Worker threads can try to evaluate expressions on the stack frames that 
	have already been disposed. A flag is added to identify that the stack 
	frame is disposed.
	* CStackFrame.java

2004-11-19 Alain Magloire

	Clear the confusion about sublist of stackframes.
	PR 78611

	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIStackFrame.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIThread.java
	* src/org/eclipse/cdt/debug/internal/model/CThread.java

2004-11-17 David Inglis
	
	Change debug target to use IBinaryObject instead of IBinaryExecutable
	
	* src/org/eclipse/cdt/debug/core/CDIDebugModel.java
	* src/org/eclipse/cdt/debug/core/ICDIDebugger.java
	* src/org/eclipse/cdt/debug/core/model/IExecFileInfo.java
	* src/org/eclipse/cdt/debug/internal/core/CDebugAdapter.java
	* src/org/eclipse/cdt/debug/internal/core/model/CDebugTarget.java
	
2004-11-16 Alain Magloire
	Optimize things by providing a new method